<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@drawable/backgroung_img"
    tools:context=".ResultActivity"
    android:orientation="vertical"
    android:padding="20dp"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Result"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="25sp"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:layout_marginTop="25dp"
        />
    <ImageView
        android:id="@+id/iv_trophy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/image"
        android:src="@drawable/gold_trophy_symbol_icon"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hey_congratulations"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:textSize="25sp"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
    />
    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:gravity="center"
        android:text="Sameer"
        android:layout_marginTop="16dp"
        android:textSize="22sp"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
    />
    <TextView
        android:id="@+id/tv_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:gravity="center"
        android:text="@string/your_score_is_9_out_of_10"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:fontFamily="sans-serif"
        />
    <Button
        android:id="@+id/btn_finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/white"
        android:text="@string/finish"
        android:textColor="@color/DarkPurple"
        android:textSize="18sp"
        android:textStyle="bold"
    />

</LinearLayout>